zweite korrektur. morgen absenden

--- a/lit.bib
+++ b/lit.bib
@@ -184,3 +184,18 @@ semilep
     year = "2014",
     note = "[Erratum: Eur.Phys.J.C 74, 3179 (2014)]"
 }
+@article{Aaij:2020nrf,
+    author = "Aaij, Roel and others",
+    collaboration = "LHCb",
+    title = "{Measurement of $C\!P$-averaged observables in the $B^{0}\rightarrow K^{*0}\mu^{+}\mu^{-}$ decay}",
+    eprint = "2003.04831",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "LHCb-PAPER-2020-002, CERN-EP-2020-027",
+    doi = "10.1103/PhysRevLett.125.011802",
+    journal = "Phys. Rev. Lett.",
+    volume = "125",
+    number = "1",
+    pages = "011802",
+    year = "2020"
+}
